info: Adding a readable summary of the ablation study for classification

--- a/evaluation/Classification_Analysis_Ablation.ipynb
+++ b/evaluation/Classification_Analysis_Ablation.ipynb
@@ -539,7 +539,13 @@
     "### 5 Conclusion\n",
     "The individual algorithmic parameter that influence runtime most is the number of percentiles sampled for numerical features. As this tend to have a fairly small impact on the feature importance, it may be a reason to consider decreasing the number of percentiles sampled by default for numerical features (currently the default is 3: [25, 50, 75]). Using only the median ([50]) would on average reduce the runtime with almost half.\n",
     "#### Final note\n",
-    "The core algorithm was updated early August 2024. The results reported here are using the code committed [chore: redirected __call__() to explain()](https://github.com/Moffran/calibrated_explanations/commit/068091186b6c383eafdae538b6b02defc78857b9). Average speedups range from 2-9 depending on setup, with substantially higher speedups of up to almost 40 times faster for individual datasets and setups. Previous results shown below:\n",
+    "The core algorithm was updated early August 2024. The results reported here are using the code committed [chore: redirected __call__() to explain()](https://github.com/Moffran/calibrated_explanations/commit/068091186b6c383eafdae538b6b02defc78857b9). Average speedups range from 2-9 depending on setup, with substantially higher speedups of up to almost 40 times faster for individual datasets and setups. Previous results shown below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Runtime & xGB_ce_0.1_1 & xGB_ce_0.1_2 & xGB_ce_0.1_3 & xGB_ce_0.1_4 & xGB_ce_0.1_9 & xGB_ce_0.2_1 & xGB_ce_0.2_2 & xGB_ce_0.2_3 & xGB_ce_0.2_4 & xGB_ce_0.2_9 & xGB_ce_0.4_1 & xGB_ce_0.4_2 & xGB_ce_0.4_3 & xGB_ce_0.4_4 & xGB_ce_0.4_9 & xGB_cce_0.1_1 & xGB_cce_0.1_2 & xGB_cce_0.1_3 & xGB_cce_0.1_4 & xGB_cce_0.1_9 & xGB_cce_0.2_1 & xGB_cce_0.2_2 & xGB_cce_0.2_3 & xGB_cce_0.2_4 & xGB_cce_0.2_9 & xGB_cce_0.4_1 & xGB_cce_0.4_2 & xGB_cce_0.4_3 & xGB_cce_0.4_4 & xGB_cce_0.4_9 & RF_ce_0.1_1 & RF_ce_0.1_2 & RF_ce_0.1_3 & RF_ce_0.1_4 & RF_ce_0.1_9 & RF_ce_0.2_1 & RF_ce_0.2_2 & RF_ce_0.2_3 & RF_ce_0.2_4 & RF_ce_0.2_9 & RF_ce_0.4_1 & RF_ce_0.4_2 & RF_ce_0.4_3 & RF_ce_0.4_4 & RF_ce_0.4_9 & RF_cce_0.1_1 & RF_cce_0.1_2 & RF_cce_0.1_3 & RF_cce_0.1_4 & RF_cce_0.1_9 & RF_cce_0.2_1 & RF_cce_0.2_2 & RF_cce_0.2_3 & RF_cce_0.2_4 & RF_cce_0.2_9 & RF_cce_0.4_1 & RF_cce_0.4_2 & RF_cce_0.4_3 & RF_cce_0.4_4 & RF_cce_0.4_9 &  \\\\\n",
     "\\hline\n",
