info: exchange counterfactual with alternative

--- a/notebooks/additional_notebooks/demo_multiclass.ipynb
+++ b/notebooks/additional_notebooks/demo_multiclass.ipynb
@@ -1125,7 +1125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explain the test set using counterfactual explanations."
+    "Explain the test set using alternative explanations."
    ]
   },
   {
@@ -1134,14 +1134,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test)"
+    "alternative_explanation = ce.explore_alternatives(X_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the counterfactual explanations. "
+    "Plot the alternative explanations. "
    ]
   },
   {
@@ -1332,14 +1332,14 @@
    ],
    "source": [
     "for i in range(num_to_test):\n",
-    "    counterfactual_explanation.plot(i, n_features_to_show=5)"
+    "    alternative_explanation.plot(i, n_features_to_show=5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add conjunctions to one of the more difficult instances (actually belonging to class 5 but incorrectly predicted as class 3). Here, all the counterfactual conjunctive rules indicate that the prediction would have been something else if some features would have been different. Note that the explanations does not indicate what else the prediction would have been, only that it would not have been the predicted class. "
+    "Add conjunctions to one of the more difficult instances (actually belonging to class 5 but incorrectly predicted as class 3). Here, all the alternative conjunctive rules indicate that the prediction would have been something else if some features would have been different. Note that the explanations does not indicate what else the prediction would have been, only that it would not have been the predicted class. "
    ]
   },
   {
@@ -1369,9 +1369,9 @@
     }
    ],
    "source": [
-    "counterfactual_15 = counterfactual_explanation.get_explanation(15)\n",
-    "counterfactual_15.add_conjunctions(max_rule_size=2).plot(n_features_to_show=15)\n",
-    "counterfactual_15.remove_conjunctions().plot(n_features_to_show=5)"
+    "alternative_15 = alternative_explanation.get_explanation(15)\n",
+    "alternative_15.add_conjunctions(max_rule_size=2).plot(n_features_to_show=15)\n",
+    "alternative_15.remove_conjunctions().plot(n_features_to_show=5)"
    ]
   },
   {
@@ -1408,9 +1408,9 @@
     }
    ],
    "source": [
-    "counterfactual_17 = counterfactual_explanation.get_explanation(17)\n",
-    "counterfactual_17.add_conjunctions(max_rule_size=3).plot(n_features_to_show=15)\n",
-    "counterfactual_17.remove_conjunctions().plot(n_features_to_show=5)"
+    "alternative_17 = alternative_explanation.get_explanation(17)\n",
+    "alternative_17.add_conjunctions(max_rule_size=3).plot(n_features_to_show=15)\n",
+    "alternative_17.remove_conjunctions().plot(n_features_to_show=5)"
    ]
   }
  ],
