--- a/notebooks/additional_notebooks/demo_speeddating.ipynb
+++ b/notebooks/additional_notebooks/demo_speeddating.ipynb
@@ -424,14 +424,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to generate counterfactual rules per instance: 2.20459463596344\n"
+      "Time taken to generate alternative rules per instance: 2.20459463596344\n"
      ]
     }
    ],
    "source": [
     "tic = time.time()\n",
-    "counterfactual_explanation = explainer.explain_counterfactual(X_test)\n",
-    "print(f\"Time taken to generate counterfactual rules per instance: {(time.time()-tic)/num_to_test}\")"
+    "alternative_explanation = explainer.explore_alternatives(X_test)\n",
+    "print(f\"Time taken to generate alternative rules per instance: {(time.time()-tic)/num_to_test}\")"
    ]
   },
   {
@@ -443,9 +443,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting counterfactual rules per instance: 0.39358541965484617\n",
+      "Time taken plotting alternative rules per instance: 0.39358541965484617\n",
       "Time taken constructing conjunctive rules per instance: 5.2319659233093265\n",
-      "Time taken plotting counterfactual and conjunctive rules per instance: 0.43167548179626464\n"
+      "Time taken plotting alternative and conjunctive rules per instance: 0.43167548179626464\n"
      ]
     },
     {
@@ -651,14 +651,14 @@
    ],
    "source": [
     "tic = time.time()\n",
-    "counterfactual_explanation.plot(n_features_to_show=15)\n",
-    "print(f\"Time taken plotting counterfactual rules per instance: {(time.time()-tic)/num_to_test}\")\n",
+    "alternative_explanation.plot(n_features_to_show=15)\n",
+    "print(f\"Time taken plotting alternative rules per instance: {(time.time()-tic)/num_to_test}\")\n",
     "tic = time.time()\n",
-    "exp = counterfactual_explanation.add_conjunctions()\n",
+    "exp = alternative_explanation.add_conjunctions()\n",
     "print(f\"Time taken constructing conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")\n",
     "tic = time.time()\n",
-    "counterfactual_explanation.plot(n_features_to_show=15)\n",
-    "print(f\"Time taken plotting counterfactual and conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")"
+    "alternative_explanation.plot(n_features_to_show=15)\n",
+    "print(f\"Time taken plotting alternative and conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")"
    ]
   },
   {
@@ -721,11 +721,11 @@
     "y_proba = model.predict_proba(X_test)\n",
     "print('Performance of underlying model on test set')\n",
     "print(classification_report(y_test, y_pred, target_names=df[target].unique().astype(str)))\n",
-    "y_va = [int(va > 0.5) for va in [e.prediction['predict'] for e in counterfactual_explanation.explanations]]\n",
+    "y_va = [int(va > 0.5) for va in [e.prediction['predict'] for e in alternative_explanation.explanations]]\n",
     "print('Performance of calibration model on test set')\n",
     "print(classification_report(y_test, y_va, target_names=df[target].unique().astype(str)))\n",
     "print('target, model pred, model prob, va pred, va prob')\n",
-    "print(*zip(y_test, y_pred, y_proba[:,1], y_va, [e.prediction['predict'] for e in counterfactual_explanation.explanations]), sep='\\n')"
+    "print(*zip(y_test, y_pred, y_proba[:,1], y_va, [e.prediction['predict'] for e in alternative_explanation.explanations]), sep='\\n')"
    ]
   }
  ],
