--- a/notebooks/additional_notebooks/imbalanced_wrap.ipynb
+++ b/notebooks/additional_notebooks/imbalanced_wrap.ipynb
@@ -561,9 +561,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Counterfactual Explanations\n",
-    "An alternative to factual rules is to extract counterfactual rules. \n",
-    "`explain_counterfactual` can be called to get counterfactual rules with an appropriate discretizer automatically assigned. Note that the discretizer has changed. "
+    "#### Alternative Explanations\n",
+    "An alternative to factual rules is to extract alternative rules. \n",
+    "`explore_alternatives` can be called to get alternative rules with an appropriate discretizer automatically assigned. Note that the discretizer has changed. "
    ]
   },
   {
@@ -591,7 +591,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanations = classifier.explain_counterfactual(X_test)\n",
+    "alternative_explanations = classifier.explore_alternatives(X_test)\n",
     "display(classifier)"
    ]
   },
@@ -599,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot`. Plotting an individual counterfactual explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Alternatives are also visualized using the `plot`. Plotting an individual alternative explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -639,10 +639,10 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot(len(y_test)-1)\n",
-    "counterfactual_explanations.add_conjunctions().plot(len(y_test)-1)\n",
+    "alternative_explanations.plot(len(y_test)-1)\n",
+    "alternative_explanations.add_conjunctions().plot(len(y_test)-1)\n",
     "\n",
-    "counterfactual_explanations.remove_conjunctions().plot(len(y_test)-1)"
+    "alternative_explanations.remove_conjunctions().plot(len(y_test)-1)"
    ]
   },
   {
