--- a/notebooks/demo_binary_classification.ipynb
+++ b/notebooks/demo_binary_classification.ipynb
@@ -872,9 +872,9 @@
    "metadata": {},
    "source": [
     "#### Counterfactual explanations\n",
-    "When using counterfactual explanations, the recommended `Discretizer` is the `EntropyDiscretizer`. The discretizer can be changed into `EntropyDiscretizer` by invoking `set_discretizer('entropy')`. Counterfactual explanations are extracted in the same way as regular and uncertainty explanations. The `EntropyDiscretizer` allows for more varied and precise counterfactual rules. The function `explain_counterfactual` will automatically assign recommended discretizer.\n",
+    "When using alternative explanations, the recommended `Discretizer` is the `EntropyDiscretizer`. The discretizer can be changed into `EntropyDiscretizer` by invoking `set_discretizer('entropy')`. Counterfactual explanations are extracted in the same way as regular and uncertainty explanations. The `EntropyDiscretizer` allows for more varied and precise alternative rules. The function `explore_alternatives` will automatically assign recommended discretizer.\n",
     "\n",
-    "Once the explanations are extracted, we can visualize them using `plot` function. The counterfactual plot visualize the probability interval for the positive class (`Diabetic` in this example). The counterfactual rules indicate what the interval would have changed into had the feature values changed according to the rule condition."
+    "Once the explanations are extracted, we can visualize them using `plot` function. The alternative plot visualize the probability interval for the positive class (`Diabetic` in this example). The alternative rules indicate what the interval would have changed into had the feature values changed according to the rule condition."
    ]
   },
   {
@@ -912,16 +912,16 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test)\n",
+    "alternative_explanation.plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conjunctional counterfactual explanations\n",
-    "As with regular and uncertainty explanations, conjunctions can also be used for counterfactual explanations.\n",
+    "#### Conjunctional alternative explanations\n",
+    "As with regular and uncertainty explanations, conjunctions can also be used for alternative explanations.\n",
     "\n",
     "As the `add_conjunctions` functions return the explanation object, they can be stacked."
    ]
@@ -953,7 +953,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions().plot(n_features_to_show=15)"
+    "alternative_explanation.add_conjunctions().plot(n_features_to_show=15)"
    ]
   }
  ],
