--- a/notebooks/demo_probabilistic_regression.ipynb
+++ b/notebooks/demo_probabilistic_regression.ipynb
@@ -887,7 +887,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, 180000)"
+    "alternative_explanation = ce.explore_alternatives(X_test, 180000)"
    ]
   },
   {
@@ -917,7 +917,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions().plot()"
+    "alternative_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -947,7 +947,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot()"
+    "alternative_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1061,7 +1061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Normalized counterfactuals using knn"
+    "#### Normalized alternatives using knn"
    ]
   },
   {
@@ -1099,9 +1099,9 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, 180000)\n",
+    "alternative_explanation = ce.explore_alternatives(X_test, 180000)\n",
     "\n",
-    "counterfactual_explanation.add_conjunctions().plot()"
+    "alternative_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -1131,7 +1131,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot()"
+    "alternative_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1232,7 +1232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Normalized counterfactuals using variance"
+    "#### Normalized alternatives using variance"
    ]
   },
   {
@@ -1250,7 +1250,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, 180000)"
+    "alternative_explanation = ce.explore_alternatives(X_test, 180000)"
    ]
   },
   {
@@ -1280,7 +1280,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions().plot()"
+    "alternative_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -1312,7 +1312,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot()"
+    "alternative_explanation.remove_conjunctions().plot()"
    ]
   }
  ],
