--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Two-sided counterfactual rules "
+    "#### Two-sided alternative rules "
    ]
   },
   {
@@ -567,7 +567,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=tsi)\n",
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=tsi)\n",
     "display(ce)"
    ]
   },
@@ -588,7 +588,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
+    "alternative_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
    ]
   },
   {
@@ -608,14 +608,14 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot()"
+    "alternative_explanation.remove_conjunctions().plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### One-sided counterfactual rules"
+    "#### One-sided alternative rules"
    ]
   },
   {
@@ -635,8 +635,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=osli)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=osli)\n",
+    "alternative_explanation.plot()"
    ]
   },
   {
@@ -656,8 +656,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=osui)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=osui)\n",
+    "alternative_explanation.plot()"
    ]
   },
   {
@@ -829,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Normalized counterfactuals using knn "
+    "#### Normalized alternatives using knn "
    ]
   },
   {
@@ -849,8 +849,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=tsi)\n",
-    "counterfactual_explanation.add_conjunctions(n_top_features=5, max_rule_size=3).plot(n_features_to_show=15)\n"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=tsi)\n",
+    "alternative_explanation.add_conjunctions(n_top_features=5, max_rule_size=3).plot(n_features_to_show=15)\n"
    ]
   },
   {
@@ -870,7 +870,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot()"
+    "alternative_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -890,8 +890,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=osli)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=osli)\n",
+    "alternative_explanation.plot()"
    ]
   },
   {
@@ -911,8 +911,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=osui)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=osui)\n",
+    "alternative_explanation.plot()"
    ]
   },
   {
@@ -1060,7 +1060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Normalized counterfactuals using variance"
+    "#### Normalized alternatives using variance"
    ]
   },
   {
@@ -1080,8 +1080,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=tsi)\n",
-    "counterfactual_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=tsi)\n",
+    "alternative_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
    ]
   },
   {
@@ -1101,7 +1101,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot()"
+    "alternative_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1121,8 +1121,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=osli)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=osli)\n",
+    "alternative_explanation.plot()"
    ]
   },
   {
@@ -1144,8 +1144,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation = ce.explain_counterfactual(X_test, low_high_percentiles=osui)\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=osui)\n",
+    "alternative_explanation.plot()"
    ]
   }
  ],
