--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -218,7 +218,7 @@
    "metadata": {},
    "source": [
     "### Counterfactual Explanations\n",
-    "_Counterfactual explanations_ contain a collection of _counterfactual feature rules_, each composed of a _prediction estimate with an uncertainty interval_ and a _counterfactual condition_, covering alternative instance values for the feature."
+    "_Counterfactual explanations_ contain a collection of _alternative feature rules_, each composed of a _prediction estimate with an uncertainty interval_ and a _alternative condition_, covering alternative instance values for the feature."
    ]
   },
   {
@@ -236,16 +236,16 @@
     }
    ],
    "source": [
-    "counterfactual_explanations = ce.explain_counterfactual(X_test)\n",
-    "counterfactual_explanation = counterfactual_explanations.get_explanation(0)\n",
-    "counterfactual = counterfactual_explanation._get_rules()"
+    "alternative_explanations = ce.explore_alternatives(X_test)\n",
+    "alternative_explanation = alternative_explanations.get_explanation(0)\n",
+    "alternative = alternative_explanation._get_rules()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the counterfactual explanations, the probability for the positive class (or the class in the `classes` field in `prediction` for multi-class prediction) with uncertainty interval can be accessed for each counterfactual feature rule. The information showed below is the same as the `plot()` method, except that the counterfactual feature rules are sorted on their absolute feature weight. "
+    "For the alternative explanations, the probability for the positive class (or the class in the `classes` field in `prediction` for multi-class prediction) with uncertainty interval can be accessed for each alternative feature rule. The information showed below is the same as the `plot()` method, except that the alternative feature rules are sorted on their absolute feature weight. "
    ]
   },
   {
@@ -285,13 +285,13 @@
    ],
    "source": [
     "print(\"Calibrated prediction with uncertainty interval:\")\n",
-    "print(f\"{counterfactual['base_predict'][0]:5.3f} [{counterfactual['base_predict_low'][0]:5.3f}, {counterfactual['base_predict_high'][0]:5.3f}]\")\n",
+    "print(f\"{alternative['base_predict'][0]:5.3f} [{alternative['base_predict_low'][0]:5.3f}, {alternative['base_predict_high'][0]:5.3f}]\")\n",
     "\n",
     "print(\"\\nInstance value and factual condition with probability and uncertainty interval:\") \n",
-    "for f, rule in enumerate(counterfactual['rule']):\n",
-    "    print(f\"{counterfactual['value'][f]:6}: {rule:40s} {counterfactual['predict'][f]:>6.3f} [{counterfactual['predict_low'][f]:>6.3f}, {counterfactual['predict_high'][f]:>6.3f}]\")\n",
+    "for f, rule in enumerate(alternative['rule']):\n",
+    "    print(f\"{alternative['value'][f]:6}: {rule:40s} {alternative['predict'][f]:>6.3f} [{alternative['predict_low'][f]:>6.3f}, {alternative['predict_high'][f]:>6.3f}]\")\n",
     "\n",
-    "counterfactual_explanation.plot()"
+    "alternative_explanation.plot()"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same goes for counterfactual conjunctions."
+    "The same goes for alternative conjunctions."
    ]
   },
   {
@@ -465,8 +465,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions() \n",
-    "conjunctive = counterfactual_explanation._get_rules()\n",
+    "alternative_explanation.add_conjunctions() \n",
+    "conjunctive = alternative_explanation._get_rules()\n",
     "\n",
     "print(\"Calibrated prediction with uncertainty interval:\")\n",
     "print(f\"{conjunctive['base_predict'][0]:5.3f} [{conjunctive['base_predict_low'][0]:5.3f}, {conjunctive['base_predict_high'][0]:5.3f}]\")\n",
@@ -476,8 +476,8 @@
     "    rule = rule.replace('\\n', ' ')\n",
     "    print(f\"{rule:60s} {conjunctive['predict'][f]:>6.3f} [{conjunctive['predict_low'][f]:>6.3f}, {conjunctive['predict_high'][f]:>6.3f}]\")\n",
     "    \n",
-    "counterfactual_explanation.plot()\n",
-    "counterfactual_explanation.remove_conjunctions()"
+    "alternative_explanation.plot()\n",
+    "alternative_explanation.remove_conjunctions()"
    ]
   }
  ],
