--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -668,9 +668,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Counterfactual Explanations\n",
-    "An alternative to factual rules is to extract counterfactual rules. \n",
-    "`explain_counterfactual` can be called to get counterfactual rules with an appropriate discretizer automatically assigned. An alternative is to first change the discretizer to `entropy` (for classification) and then call the `CalibratedExplainer` object as above.  "
+    "#### Alternative Explanations\n",
+    "An alternative to factual rules is to extract alternative rules. \n",
+    "`explore_alternatives` can be called to get alternative rules with an appropriate discretizer automatically assigned. An alternative is to first change the discretizer to `entropy` (for classification) and then call the `CalibratedExplainer` object as above.  "
    ]
   },
   {
@@ -697,7 +697,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanations = explainer.explain_counterfactual(X_test)\n",
+    "alternative_explanations = explainer.explore_alternatives(X_test)\n",
     "display(explainer)"
    ]
   },
@@ -705,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot`. Plotting an individual counterfactual explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Alternatives are also visualized using the `plot`. Plotting an individual alternative explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -785,11 +785,11 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot()\n",
-    "counterfactual_explanations.add_conjunctions().plot()\n",
-    "counterfactual_explanations.remove_conjunctions().plot()\n",
+    "alternative_explanations.plot()\n",
+    "alternative_explanations.add_conjunctions().plot()\n",
+    "alternative_explanations.remove_conjunctions().plot()\n",
     "\n",
-    "counterfactual_explanations.plot(0)"
+    "alternative_explanations.plot(0)"
    ]
   },
   {
@@ -1426,7 +1426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `explain_counterfactual` will work exactly the same as for classification. Otherwise, the discretizer must be set explicitly and the 'decile' discretizer is recommended. Counterfactual plots work as for classification."
+    "The `explore_alternatives` will work exactly the same as for classification. Otherwise, the discretizer must be set explicitly and the 'decile' discretizer is recommended. Alternative plots work as for classification."
    ]
   },
   {
@@ -1504,11 +1504,11 @@
     }
    ],
    "source": [
-    "counterfactual_explanations = explainer.explain_counterfactual(X_test)\n",
+    "alternative_explanations = explainer.explore_alternatives(X_test)\n",
     "\n",
-    "counterfactual_explanations.plot()\n",
-    "counterfactual_explanations.add_conjunctions().plot()\n",
-    "counterfactual_explanations.remove_conjunctions().plot()"
+    "alternative_explanations.plot()\n",
+    "alternative_explanations.add_conjunctions().plot()\n",
+    "alternative_explanations.remove_conjunctions().plot()"
    ]
   },
   {
