--- a/notebooks/quickstart_wrap.ipynb
+++ b/notebooks/quickstart_wrap.ipynb
@@ -366,7 +366,7 @@
    "metadata": {},
    "source": [
     "#### Counterfactual Explanations\n",
-    "An alternative to factual rules is to extract counterfactual rules, which is done using the `explain_counterfactual` function."
+    "An alternative to factual rules is to extract alternative rules, which is done using the `explore_alternatives` function."
    ]
   },
   {
@@ -394,7 +394,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanations = classifier.explain_counterfactual(X_test)\n",
+    "alternative_explanations = classifier.explore_alternatives(X_test)\n",
     "display(classifier)"
    ]
   },
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot`. Plotting an individual counterfactual explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Counterfactuals are also visualized using the `plot`. Plotting an individual alternative explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -462,10 +462,10 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot()\n",
-    "counterfactual_explanations.add_conjunctions().plot()\n",
+    "alternative_explanations.plot()\n",
+    "alternative_explanations.add_conjunctions().plot()\n",
     "\n",
-    "counterfactual_explanations.plot(0)"
+    "alternative_explanations.plot(0)"
    ]
   },
   {
@@ -858,7 +858,7 @@
    "metadata": {},
    "source": [
     "#### Counterfactual Explanations\n",
-    "The `explain_counterfactual` will work exactly the same as for classification. "
+    "The `explore_alternatives` will work exactly the same as for classification. "
    ]
   },
   {
@@ -886,7 +886,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanations = regressor.explain_counterfactual(X_test)\n",
+    "alternative_explanations = regressor.explore_alternatives(X_test)\n",
     "display(regressor)"
    ]
   },
@@ -944,8 +944,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot()\n",
-    "counterfactual_explanations.add_conjunctions().plot()"
+    "alternative_explanations.plot()\n",
+    "alternative_explanations.add_conjunctions().plot()"
    ]
   },
   {
@@ -1051,8 +1051,8 @@
     }
    ],
    "source": [
-    "probabilistic_counterfactual_explanations = regressor.explain_counterfactual(X_test, threshold=200)\n",
-    "probabilistic_counterfactual_explanations.plot()"
+    "probabilistic_alternative_explanations = regressor.explore_alternatives(X_test, threshold=200)\n",
+    "probabilistic_alternative_explanations.plot()"
    ]
   },
   {
